# mdcal

./: .gitignore  DESIGN.md  PKGBUILD  README.md  pyproject.toml  python-mdcal.install
.github/workflows/: ci.yml
scripts/: delete_stale_snapshot.py  rename_status.py  transfer_snapshot_tags.py  unify_decks.py
src/mdcal/: __init__.py  events.py  gcal.py  ics.py  imip.py  window.py
tests/: conftest.py  test_events.py  test_full_fidelity.py  test_gcal.py  test_ics.py  test_imip.py  test_meeting_links.py  test_push_merge.py  test_window.py
tmpfiles.d/: mdcal.conf
