[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdcal"
version = "0.0.9"
description = "An mddb-backed personal calendar"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Handley Research Group", email = "wh260@cam.ac.uk"}
]
keywords = ["calendar", "agents", "yaml", "markdown", "mddb"]
dependencies = ["mddb>=0.0.17", "icalendar>=6", "python-dateutil", "PyYAML>=6.0"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

[project.optional-dependencies]
gcal = ["google-api-python-client", "google-auth", "google-auth-httplib2"]
dev = ["pytest>=8.0", "ruff>=0.5", "pre-commit>=3.0", "tomli>=2.0"]

[project.scripts]
mdcal-import = "mdcal.ics:main"
mdcal-pull = "mdcal.gcal:main"
mdcal-reply = "mdcal.imip:main"

[project.urls]
Homepage = "https://github.com/handley-lab/mdcal"
Repository = "https://github.com/handley-lab/mdcal"
Issues = "https://github.com/handley-lab/mdcal/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/mdcal/_*.py" = ["D"]
"tests/*" = ["D"]
"scripts/*" = ["D"]

[tool.setuptools.packages.find]
where = ["src"]
